--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/dmlc/mshadow.git
 [submodule "3rdparty/dmlc-core"]
 	path = 3rdparty/dmlc-core
-	url = https://github.com/gbxu/dmlc-core.git
+	url = https://github.com/Jeffery-Song/dmlc-core.git
 [submodule "3rdparty/nnvm"]
 	path = 3rdparty/nnvm
 	url = https://github.com/dmlc/nnvm
